# dspy-session

./: .gitignore  README.md  mlflow.db  mrmd.md  pyproject.toml
docs/: api-usage-examples.md  decomposed-translator.md  design-notes.md  dspy-proposal-per-module-lm-adapter.md  multiple-signatures.md  rlm.md  session-recursion.md  sessionify-vs-with-memory.md  template-adapter-integration.md  untitled.md  v2-recursive-sessions.md
dspy_session/: __init__.py  session.py
dspy_session/integrations/: mlflow.py
dspy_session/tests/: test_readme_usage.py  test_session.py  test_state_binding.py  test_with_memory_policies.py
mlruns/1/2898734f71d74744abecdeb35b6f015e/artifacts/: session_state.json
mlruns/1/71f90f4de5574dceb035fb3116cef362/artifacts/session/: examples.json  session_state.json  turns.json
