[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-session"
version = "0.1.0"
description = "Multi-turn session wrapper for DSPy programs — turn any module into a stateful conversation with optimizer-ready linearization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Maxime Rivest", email = "mrive052@gmail.com"},
]
keywords = ["dspy", "llm", "session", "multi-turn", "conversation", "history"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy>=2.6",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/maximerivest/dspy-session"
Repository = "https://github.com/maximerivest/dspy-session"
Issues = "https://github.com/maximerivest/dspy-session/issues"

[tool.setuptools.packages.find]
include = ["dspy_session*"]

[tool.pytest.ini_options]
testpaths = ["dspy_session/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
